WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283334
[WebGPU] An invalid TextureView may be considered valid if its parent is destroyed
https://bugs.webkit.org/show_bug.cgi?id=283334
Summary
[WebGPU] An invalid TextureView may be considered valid if its parent is dest...
Mike Wyrzykowski
Reported
2024-11-18 16:48:13 PST
[WebGPU] An invalid TextureView may be considered valid if its parent is destroyed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-18 16:48:28 PST
<
rdar://problem/140161514
>
Mike Wyrzykowski
Comment 2
2024-11-18 16:54:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36827
EWS
Comment 3
2024-11-18 21:29:49 PST
Committed
286781@main
(9de8ad6aad76): <
https://commits.webkit.org/286781@main
> Reviewed commits have been landed. Closing PR #36827 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug