[WebGPU] An invalid TextureView may be considered valid if its parent is destroyed https://bugs.webkit.org/show_bug.cgi?id=283334 rdar://140161514

Reviewed by Cameron McCormack.

An invalid TextureView created from a valid Texture
should remain invalid throughout its lifetime and not
become valid if the parent Texture instance is destroyed.

We can simply remove the check for " || isDestroyed()" in
TextureView::isValid() because m_texture is set to a placeholder,
not nil, when the TextureView is destroyed.

Test: fuzz-275229.html continues to pass in debug.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::physicalTextureExtent):
Add debug assertion since it is never expected to reach this
function with a texture format of 'Undefined' or 'Force32'

* Source/WebGPU/WebGPU/TextureView.mm:
(WebGPU::TextureView::isValid const):

Canonical link: https://commits.webkit.org/286781@main