Source/WebGPU/WebGPU/Texture.mm
@@ -3273,6 +3273,9 @@ WGPUExtent3D Texture::physicalMiplevelSpecificTextureExtent(uint32_t mipLevel)
 
 WGPUExtent3D Texture::physicalTextureExtent(WGPUTextureDimension dimension, WGPUTextureFormat format, WGPUExtent3D logicalExtent)
 {
+    ASSERT(texelBlockWidth(format));
+    ASSERT(texelBlockHeight(format));
+
     switch (dimension) {
     case WGPUTextureDimension_1D:
         return {
